--- a/src/main/resources/templates/admin/GroupMemberList.html
+++ b/src/main/resources/templates/admin/GroupMemberList.html
@@ -11,27 +11,37 @@
     <link href="../css/bootstrap.css" rel="stylesheet">
     <link href="../css/sb-admin-2.css" rel="stylesheet">
     <link href="../css/font-awesome.css" rel="stylesheet">
-    <title>Title</title>
+    <title>代表团成员-Гулаш&nbsp;система&nbsp;会议管理系统</title>
 </head>
 <body>
 <div th:replace="allUser/adminHeader::adminHeader"></div>
 <div id="res" hidden="hidden">
-    <h1>xx代表团成员列表</h1>
+    <h2>代表团成员列表</h2>
     <hr>
     <table class="table table-hover">
         <thead>
         <tr>
             <td>#</td>
             <td>姓名</td>
-            <td>团队</td>
             <td>申请类型</td>
             <td>申请状态</td>
-            <td>委员会</td>
             <td>操作</td>
         </tr>
         </thead>
         <tbody>
-
+        <tr th:each="delegate:${delegateList}">
+            <td th:text="${delegate.ID}"></td>
+            <td>
+                <a th:text="${delegate.name}" th:href="@{/admin/memberDetailPage(id=${delegate.ID})}"></a>
+            </td>
+            <td th:text="${delegate.applicationType}"></td>
+            <td th:text="${delegate.applicationStatus}"></td>
+            <td>
+                <button class="btn btn-danger"
+                        th:onclick="removeDelegateFromGroup([[${delegate.ID}]])"><i
+                        class="fa fa-times"></i></button>
+            </td>
+        </tr>
         </tbody>
     </table>
 </div>
@@ -51,5 +61,27 @@
         $('#main').append($('#res').html());
         $('#res').remove();
     });
+
+    function removeDelegateFromGroup(id) {
+        if(confirm("确认从本代表团移除此代表吗？")){
+            $.ajax({
+                type:'POST',
+                url:'/admin/removeDelegateFromGroup',
+                dataType:'json',
+                data:{
+                    'delegateID':id
+                },
+                success:function (data) {
+                    if(data['status']==='SUCCESS'){
+                        alert('移除代表成功');
+                        window.location.reload()
+                    }else {
+                        alert('移除代表失败');
+                        window.location.reload()
+                    }
+                }
+            })
+        }
+    }
 </script>
 </html>
