--- a/src/main/resources/templates/admin/AdminDetail.html
+++ b/src/main/resources/templates/admin/AdminDetail.html
@@ -1,37 +1,112 @@
 <!DOCTYPE html>
-<html lang="zh" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <script src="../js/jquery-3.4.1.min.js"></script>
-    <script src="../js/popper.min.js"></script>
     <script src="../js/bootstrap.js"></script>
+    <script src="../js/popper.min.js"></script>
+    <script src="../js/sb-admin-2.js"></script>
+    <script src="../js/cropper.js"></script>
+    <script src="../js/jquery.easing.js"></script>
+    <script src="../js/jquery-cropper.js"></script>
+    <script src="../js/bootstrap.bundle.min.js"></script>
+    <script src="../js/bootstrap-select.js"></script>
+    <script src="../js/bootstrap-select-defaults-zh_CN.js"></script>
     <link href="../css/bootstrap.css" rel="stylesheet">
-    <link rel="stylesheet" href="../css/font-awesome.css">
-    <title>Title</title>
+    <link href="../css/sb-admin-2.css" rel="stylesheet">
+    <link href="../css/font-awesome.css" rel="stylesheet">
+    <link href="../css/cropper.css" rel="stylesheet">
+    <link href="../css/bootstrap-select.css" rel="stylesheet">
+    <title>面试详细信息-Гулаш&nbsp;система&nbsp;会议管理系统</title>
 </head>
 <body>
-<form th:object="${admin}">
-    <label for="name"></label>
-    <label for="phone"></label>
-    <label for="email"></label>
-    <table>
-        <thead>个人信息</thead>
-        <tr>
-            <td>姓名</td>
-            <td><input type="text" id="name" th:text="${admin.name}"></td>
-        </tr>
-        <tr>
-            <td>电子邮箱</td>
-            <td><input type="text" id="email" th:text="${admin.email}"></td>
-        </tr>
-        <tr>
-            <td>手机号码</td>
-            <td><input type="text" id="phone" th:text="${admin.email}"></td>
-        </tr>
-    </table>
-    <ul><li class="divider"></li></ul>
-    <table></table>
-
-</form>
+<div th:replace="allUser/adminHeader::adminHeader"></div>
+<div id="res">
+    <h2>管理员信息</h2>
+    <hr>
+    <div>
+        <div class="card shadow">
+            <div class="card-header">基础信息</div>
+            <div class="card-body">
+                <table class="table table-hover text-center">
+                    <tr>
+                        <td>管理员姓名</td>
+                        <td th:text="${admin.name}"></td>
+                    </tr>
+                    <tr>
+                        <td>电子邮箱</td>
+                        <td th:text="${admin.email}"></td>
+                    </tr>
+                    <tr>
+                        <td>手机号码</td>
+                        <td th:text="${admin.phone}"></td>
+                    </tr>
+                    <tr>
+                        <td>称谓</td>
+                        <td th:text="${admin.title}"></td>
+                    </tr>
+                </table>
+            </div>
+        </div>
+    </div>
+    <div class="mt-4">
+        <div class="card shadow">
+            <div class="card-header">权限信息</div>
+            <div class="card-body">
+                <table class="table table-hover text-center">
+                    <tr>
+                        <td>全局学术管理员</td>
+                        <td>
+                            <i class="fa fa-check" th:if="${admin.role_AG}"></i>
+                            <i class="fa fa-times" th:unless="${admin.role_AG}"></i>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>单一会场学术管理员</td>
+                        <td>
+                            <i class="fa fa-check" th:if="${admin.role_AD}"></i>
+                            <i class="fa fa-times" th:unless="${admin.role_AD}"></i>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>管制行政管理员</td>
+                        <td>
+                            <i class="fa fa-check" th:if="${admin.role_D}"></i>
+                            <i class="fa fa-times" th:unless="${admin.role_D}"></i>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>总务行政管理员</td>
+                        <td>
+                            <i class="fa fa-check" th:if="${admin.role_L}"></i>
+                            <i class="fa fa-times" th:unless="${admin.role_L}"></i>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>财务行政管理员</td>
+                        <td>
+                            <i class="fa fa-check" th:if="${admin.role_F}"></i>
+                            <i class="fa fa-times" th:unless="${admin.role_F}"></i>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>秘书长管理员</td>
+                        <td>
+                            <i class="fa fa-check" th:if="${admin.role_SG}"></i>
+                            <i class="fa fa-times" th:unless="${admin.role_SG}"></i>
+                        </td>
+                    </tr>
+                </table>
+            </div>
+        </div>
+    </div>
+</div>
+<script>
+    $(function () {
+        $('#main').append($('#res').html());
+        $('#res').remove();
+    });
+</script>
 </body>
 </html>
