--- a/src/main/resources/templates/allUser/userHeader.html
+++ b/src/main/resources/templates/allUser/userHeader.html
@@ -29,7 +29,7 @@
         <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
 
             <!-- Sidebar - Brand -->
-            <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
+            <a class="sidebar-brand d-flex align-items-center justify-content-center" href="/user/index">
                 <div class="sidebar-brand-icon rotate-n-15">
                     <i class="fa fa-github fa-2x"></i>
                 </div>
@@ -49,7 +49,7 @@
 
             <!-- Nav Item - Utilities Collapse Menu -->
             <li class="nav-item">
-                <a class="nav-link collapsed" href="#">
+                <a class="nav-link collapsed" th:href="@{/user/userProfile(id=${session.USER_INFO.id})}">
                     <i class="fa fa-fw fa-wrench"></i>
                     <span th:text="#{personalInformation}"></span>
                 </a>
@@ -186,7 +186,12 @@
                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 <span class="mr-2 d-none d-lg-inline text-gray-600 small"
                                       th:text="${session.USER_INFO.name}">test User</span>
-                                <img class="img-profile rounded-circle" src="../img/head/test.png">
+                                <img class="img-profile rounded-circle"
+                                     th:unless="${#strings.isEmpty(session.USER_INFO.avatarPath)}"
+                                     th:src="${session.USER_INFO.avatarPath}" alt="head">
+                                <img class="img-profile rounded-circle"
+                                     th:if="${#strings.isEmpty(session.USER_INFO.avatarPath)}"
+                                     src="../img/head/defaultHead.png" alt="head">
                             </a>
                             <!-- Dropdown - User Information -->
                             <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
@@ -194,14 +199,6 @@
                                 <a class="dropdown-item" th:href="@{/user/userProfile(id=${session.USER_INFO.id})}">
                                     <i class="fa fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
                                     个人资料
-                                </a>
-                                <a class="dropdown-item" href="#">
-                                    <i class="fa fa-cogs fa-sm fa-fw mr-2 text-gray-400"></i>
-                                    设置
-                                </a>
-                                <a class="dropdown-item" href="#">
-                                    <i class="fa fa-list fa-sm fa-fw mr-2 text-gray-400"></i>
-                                    Activity Log
                                 </a>
                                 <div class="dropdown-divider"></div>
                                 <a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal">
