--- a/src/main/resources/templates/allUser/register.html
+++ b/src/main/resources/templates/allUser/register.html
@@ -60,6 +60,13 @@
                                        name="email" id="email"
                                        placeholder="请输入电子邮箱" required>
                             </div>
+                            <div class="form-group">
+                                <label for="phone"></label>
+                                <input class="form-control form-control-user" onkeyup="phoneCheck()" th:field="${User.phone}"
+                                       name="phone" id="phone"
+                                       placeholder="请输入手机号码" required>
+                                <span id="phoneInfo"></span>
+                            </div>
                             <div class="form-group row">
                                 <div class="col-sm-6 mb-3 mb-sm-0">
                                     <label for="password"></label>
@@ -75,7 +82,8 @@
                                     <span id="info"></span>
                                 </div>
                             </div>
-                            <span th:if="${param.error}" th:text="${session.SPRING_SECURITY_LAST_EXCEPTION.message}" style="color: red"></span>
+                            <span th:if="${param.error}" th:text="${session.SPRING_SECURITY_LAST_EXCEPTION.message}"
+                                  style="color: red"></span>
                             <button type="submit" id="submitButton" class="btn btn-primary btn-user btn-block" disabled>
                                 注册
                             </button>
@@ -99,9 +107,20 @@
         var password = $("#password").val();
         if (pattern.test(password)) {
             $("#passwordInfo").html("<i class='fa fa-check'></i>").css("color", "green");
-        }else {
-            $("#submitButton").attr("disabled","disabled");
+        } else {
+            $("#submitButton").attr("disabled", "disabled");
             $("#passwordInfo").text("密码必须包含大写字母小写字母和数字").css("color", "red")
+        }
+    }
+
+    function phoneCheck() {
+        var phone = $('#phone').val();
+        var phonePattern = /^1(3|4|5|6|7|8|9)\d{9}$/;
+        if (!phonePattern.test(phone)) {
+            $("#submitButton").attr("disabled", "disabled");
+            $("#phoneInfo").text("手机号码格式错误").css("color", "red");
+        } else {
+            $("#phoneInfo").html("<i class='fa fa-check'></i>").css("color", "green");
         }
     }
 
